examples/passing/ModuleDeps/M2.purs
module M2 where

import M3

bar = M3.baz
