examples/failing/ImportModule/M2.purs
module M2 where

data X = X
